fix(style): inherit text color for mark elements to fix color errors in dark mode

--- a/src/styles/markdown.less
+++ b/src/styles/markdown.less
@@ -218,6 +218,7 @@
 	}
 
 	mark {
+		color: inherit;
 		background-color: initial;
 
 		text-decoration: underline wavy 0.05em;
